feat: Refactor expense handling and reporting
- Updated frontend components to use new expense data structure with `amount` and `expenseId`.
- Enhanced formatting functions to include category formatting and improved date handling.
- Introduced new API version (v2) with updated response models for expenses, categories, and reports.
- Implemented a new controller for handling v2 extract requests and responses.
- Standardized database schema for expenses and reports, ensuring consistency in naming and relationships.
- Added migration script to update existing database structure to align with new models.