@@ -2,166 +2,113 @@ package io.github.renatoxico.extract.service;
 
 import io.github.renatoxico.extract.exception.ProcessingException;
 import io.github.renatoxico.extract.model.AppUser;
+import io.github.renatoxico.extract.model.CategorySummary;
 import io.github.renatoxico.extract.model.Expense;
-import io.github.renatoxico.extract.model.ExpenseDTO;
+import io.github.renatoxico.extract.model.ExpenseData;
+import io.github.renatoxico.extract.model.ExpenseGroup;
 import io.github.renatoxico.extract.model.ExpenseReport;
-import io.github.renatoxico.extract.model.ExpensesCategories;
-import io.github.renatoxico.extract.model.ExpensesGroupedDTO;
-import io.github.renatoxico.extract.model.NoteableDay;
-import io.github.renatoxico.extract.model.ReportExport;
+import io.github.renatoxico.extract.model.ReportData;
 import io.github.renatoxico.extract.repo.AppUserRepository;
 import io.github.renatoxico.extract.repo.ExpenseReportRepository;
 import io.github.renatoxico.extract.repo.ExpenseRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.time.Instant;
-import java.util.Collections;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.mock;
 
 @ExtendWith(MockitoExtension.class)
 class ExpenseReportingServiceTest {
+    @Mock ExpenseRepository expenseRepository;
+    @Mock ExpenseReportRepository reportRepository;
+    @Mock AppUserRepository appUserRepository;
+    @Mock AppUser owner;
 
-    @Mock
-    private ExpenseRepository expenseRepo;
-
-    @Mock
-    private ExpenseReportRepository expenseReportRepository;
-
-    @Mock
-    private AppUserRepository appUserRepository;
-
-    @InjectMocks
     private ExpenseReportingService service;
 
-    @Test
-    void shouldGenerateUniqueIds() {
-        String id1 = service.generateId(42L);
-        String id2 = service.generateId(42L);
-        assertThat(id1).isNotEqualTo(id2);
+    @BeforeEach
+    void setUp() {
+        service = new ExpenseReportingService(
+            expenseRepository, reportRepository, appUserRepository, new V2ReportMapper());
     }
 
     @Test
-    void shouldGenerateUrlSafeId() {
-        String id = service.generateId(42L);
-        assertThat(id).matches("[a-z0-9_-]+");
-    }
-
-    @Test
-    void shouldGenerateSufficientEntropy() {
-        String id = service.generateId(42L);
-        assertThat(id.length()).isGreaterThanOrEqualTo(20);
-    }
-
-    @Test
-    void shouldPersistReportWhenGeneratingId() {
-        AppUser owner = mock(AppUser.class);
+    void createReportGeneratesOpaqueIdAndPersistsOwner() {
         when(appUserRepository.getReferenceById(42L)).thenReturn(owner);
-        Instant beforeGeneration = Instant.now();
 
-        String id = service.generateId(42L);
+        String reportId = service.createReport(42L);
 
-        Instant afterGeneration = Instant.now();
-        ArgumentCaptor<ExpenseReport> reportCaptor = ArgumentCaptor.forClass(ExpenseReport.class);
-        verify(expenseReportRepository).save(reportCaptor.capture());
-        ExpenseReport report = reportCaptor.getValue();
-        assertThat(report.getSessionId()).isEqualTo(id);
-        assertThat(report.getOwner()).isEqualTo(owner);
-        assertThat(report.getCreationDate()).isBetween(beforeGeneration, afterGeneration);
+        assertThat(reportId).hasSize(32).matches("[a-z0-9_-]{32}");
+        ArgumentCaptor<ExpenseReport> captor = ArgumentCaptor.forClass(ExpenseReport.class);
+        org.mockito.Mockito.verify(reportRepository).save(captor.capture());
+        assertThat(captor.getValue().getId()).isEqualTo(reportId);
+        assertThat(captor.getValue().getOwner()).isSameAs(owner);
+        assertThat(captor.getValue().getCreatedAt()).isNotNull();
     }
 
     @Test
-    void shouldReturnCompleteReportWithAllSections() {
-        String sessionId = "test-session";
-
-        List<ExpensesGroupedDTO> groupedExpenses = List.of(
-                new ExpensesGroupedDTO("SUPERMERCADO", new BigDecimal("150.00"), 3L, "Supermercado")
+    void getReportBuildsSemanticHighlightsAndPreservesCategoryCounts() {
+        String reportId = "report-123";
+        ExpenseReport report = new ExpenseReport(reportId, owner);
+        List<ExpenseData> expenses = List.of(
+            new ExpenseData(1L, "MARKET", new BigDecimal("100.00"), "15/03/2025", "Supermercado"),
+            new ExpenseData(2L, "CAFE", new BigDecimal("30.00"), "15/03/2025", null),
+            new ExpenseData(3L, "RENT", new BigDecimal("90.00"), "16/03/2025", "Moradia / Contas")
         );
-        List<NoteableDay> notableDays = List.of(
-                new NoteableDay("15/03/2025", 5L, new BigDecimal("500.00"))
-        );
-        List<ExpenseDTO> allExpenses = List.of(
-                new ExpenseDTO("TV SAMSUNG", new BigDecimal("3500.00"), "20/03/2025", "E-commerce"),
-                new ExpenseDTO("SUPERMERCADO", new BigDecimal("150.00"), "15/03/2025", "Supermercado")
-        );
-        List<ExpensesCategories> expensesByType = List.of(
-                new ExpensesCategories(new BigDecimal("150.00"), "Supermercado")
-        );
+        when(reportRepository.findById(reportId)).thenReturn(Optional.of(report));
+        when(expenseRepository.findExpenseDataByReportId(reportId)).thenReturn(expenses);
+        when(expenseRepository.findExpenseGroupsByReportId(reportId)).thenReturn(List.of(
+            new ExpenseGroup("MARKET", new BigDecimal("100.00"), 1L, "Supermercado")));
+        when(expenseRepository.findCategorySummariesByReportId(reportId)).thenReturn(List.of(
+            new CategorySummary("Supermercado", new BigDecimal("100.00"), 1L),
+            new CategorySummary(null, new BigDecimal("30.00"), 1L),
+            new CategorySummary("Moradia / Contas", new BigDecimal("90.00"), 1L)));
 
-        when(expenseRepo.getGroupedExpenses(sessionId)).thenReturn(groupedExpenses);
-        when(expenseRepo.getNoteableDays(sessionId)).thenReturn(notableDays);
-        when(expenseRepo.getAllExpenses(sessionId)).thenReturn(allExpenses);
-        when(expenseRepo.getExpensesByType(sessionId)).thenReturn(expensesByType);
+        ReportData result = service.getReport(reportId);
 
-        ReportExport report = service.getFullReport(sessionId);
-
-        assertThat(report)
-                .extracting(
-                        "smartGroupExpenselist",
-                        "notableDays",
-                        "allExpenses",
-                        "expensesByCategory",
-                        "biggestSingularExpense",
-                        "sessionToken"
-                )
-                .containsExactly(
-                        groupedExpenses,
-                        notableDays,
-                        allExpenses,
-                        expensesByType,
-                        allExpenses.getFirst(),
-                        sessionId
-                );
-        verify(expenseRepo).getAllExpenses(sessionId);
+        assertThat(result.reportId()).isEqualTo(reportId);
+        assertThat(result.categorySummaries()).extracting(CategorySummary::occurrenceCount)
+            .containsExactly(1L, 1L, 1L);
+        assertThat(result.categorySummaries()).extracting(CategorySummary::occurrenceCount)
+            .satisfies(counts -> assertThat(counts.stream().mapToLong(Long::longValue).sum()).isEqualTo(3));
+        assertThat(result.highlights().largestExpense().expenseId()).isEqualTo(1L);
+        assertThat(result.highlights().mostActiveDay().date()).isEqualTo("15/03/2025");
+        assertThat(result.highlights().mostActiveDay().transactionCount()).isEqualTo(2);
+        assertThat(result.highlights().highestSpendingDay().date()).isEqualTo("15/03/2025");
     }
 
     @Test
-    void shouldExportValidCSVWithHeaders() {
-        String sessionId = "test-session";
-        Expense expense = new Expense(sessionId, new BigDecimal("99.90"), "UBER", "15/03/2025", "Transporte");
-        when(expenseRepo.getAllExpenses2(sessionId)).thenReturn(List.of(expense));
+    void csvContractsUseVersionSpecificHeadersAndDates() {
+        Expense expense = new Expense(
+            "report-123", new BigDecimal("99.90"), "UBER", "15/03/2025", "Transporte / Auto");
+        when(expenseRepository.findAllByReportIdOrderByAmountDescIdAsc("report-123"))
+            .thenReturn(List.of(expense));
 
-        byte[] csv = service.exportReportCSV(sessionId);
-        String csvContent = new String(csv);
+        String v1 = new String(service.exportReportCsvV1("report-123"), StandardCharsets.UTF_8);
+        String v2 = new String(service.exportReportCsvV2("report-123"), StandardCharsets.UTF_8);
 
-        assertThat(csvContent).contains("\"id\"");
-        assertThat(csvContent).contains("\"transactionName\"");
-        assertThat(csvContent).contains("\"UBER\"");
-        assertThat(csvContent).contains("\"99.90\"");
+        assertThat(v1).contains("transactionName", "transactionType", "value", "sessionId", "15/03/2025");
+        assertThat(v2).contains("expenseId", "expenseName", "category", "amount", "reportId", "2025-03-15");
     }
 
     @Test
-    void shouldThrowWhenNoExpensesForExport() {
-        when(expenseRepo.getAllExpenses2("empty")).thenReturn(Collections.emptyList());
+    void v2CsvRejectsInvalidHistoricalDate() {
+        Expense expense = new Expense("report-123", BigDecimal.ONE, "TEST", "invalid", null);
+        when(expenseRepository.findAllByReportIdOrderByAmountDescIdAsc("report-123"))
+            .thenReturn(List.of(expense));
 
-        assertThatThrownBy(() -> service.exportReportCSV("empty"))
-                .isInstanceOf(ProcessingException.class)
-                .satisfies(ex -> {
-                    ProcessingException pe = (ProcessingException) ex;
-                    assertThat(pe.getErrorCode()).isEqualTo("SESSION_NOT_FOUND");
-                });
-    }
-
-    @Test
-    void shouldHandleExpensesWithNullFields() {
-        String sessionId = "test-session";
-        Expense expense = new Expense(sessionId, null, null, null, null);
-        when(expenseRepo.getAllExpenses2(sessionId)).thenReturn(List.of(expense));
-
-        byte[] csv = service.exportReportCSV(sessionId);
-        String csvContent = new String(csv);
-
-        assertThat(csvContent).contains("\"\"");
+        assertThatThrownBy(() -> service.exportReportCsvV2("report-123"))
+            .isInstanceOf(ProcessingException.class)
+            .hasFieldOrPropertyWithValue("errorCode", "REPORT_DATA_INVALID");
     }
 }
